app/design/adminhtml/Magento/backend/web/css/source/forms/_fields.less
/* ... */
.admin__fieldset-product-websites {
    position: relative;
    z-index: @z-index-3;
}

.admin__fieldset-note {
    margin-bottom: @indent__base;
}

.admin__form-field {
    border: 0;
    margin: 0;
    padding: 0;
}

.admin__form-field-control,
.admin__field-control {
    .admin__control-text,
    .admin__control-textarea {
        width: 100%;
        &.disabled {
            background-color: #e9e9e9;
            border-color: #adadad;
            color: #303030;
            cursor: not-allowed;
            opacity: .5;
        }
    }
}

.admin__field-no-label {
    &:extend(.abs-field-no-label all);
}

.admin__field-row {
    &:extend(.abs-field-rows all);
}

//
//  Label
//  ---------------------------------------------

.admin__field-label {
    color: @field-label__color;
    margin: 0;
    text-align: right;

    label {
        cursor: pointer;
    }

    + br {
        display: none;
    }

    .admin__field:not(.admin__field-option) > & {
        &:extend(.abs-word-wrap all);
        font-family: @font-family__base;
        font-size: @field-label__font-size;
        font-weight: @font-weight__semibold;
        line-height: 3.2rem;
        padding: 0;
        white-space: nowrap;

        &:before {
            .appearing__off();
            content: '.';
            margin-left: -7px;
            overflow: hidden;
        }

        span {
            display: inline-block;
            line-height: @field-label__line-height;
            vertical-align: middle;
            white-space: normal;

            &[data-config-scope] {
                position: relative;

                &:before {
                    &:extend(.abs-config-scope-label all);
                }
            }
        }
    }

    .required > &, // ToDo UI: change classes 'required' to '_required'.
    ._required > & {
        span {
            &:after {
                color: @validation__color;
                content: '*';
                display: inline-block;
                font-size: @font-size__l;
                font-weight: @font-weight__heavier;
                line-height: 1;
                margin-left: 10px;
                margin-top: .2rem;
                position: absolute;
                z-index: 1;
            }
        }
    }

    ._disabled > & {
        color: @field-label__disabled__color;
        cursor: default;
    }
}

//
//  Field
//  ---------------------------------------------

.admin__field {
    &:extend(.abs-field-sizes all);
    margin-bottom: 0;

    & + & {
        margin-top: 1.5rem;
    }

    &:not(.admin__field-option) ~ .admin__field-option {
        margin-top: .5rem;
    }

    &.admin__field-option ~ .admin__field-option {
        margin-top: .9rem;
    }

    & ~ .admin__field-option:last-child {
        margin-bottom: .8rem;
    }

    .admin__fieldset > & {
        margin-bottom: 3rem;
        position: relative;
    }

    //  Hide group legend and show first field label instead
    legend {
        &.admin__field-label {
            opacity: 1;
        }
    }

    //  ToDo UI: Scope Labels must be moved from right side of each control to the place under the label of the control.
    //  This code must be removed after Scope Labels are moved completely.
    //  Till that time they'll be disabled by commenting pseudo-element content property.
    &[data-config-scope] {
        &:before {
            #mix-grid .return_length(@field-label-grid__column + @field-control-grid__column, @field-grid__columns);
            color: @field-scope__color;
            content: attr(data-config-scope);
            display: inline-block;
            font-size: @font-size__s;
            left: @_length;
            line-height: 3.2rem;
            margin-left: 2 * @temp_gutter;
            position: absolute;

            & {
                #mix-grid .width(@field-label-grid__column, @field-grid__columns);
            }
        }

        .admin__field-control &:nth-child(n + 2):before {
            content: '';
        }
    }

    &._error {
        .admin__field-control [class*='admin__control-'] [class*='admin__addon-']:before,
        .admin__field-control [class*='admin__addon-']:before,
        .admin__field-control > [class*='admin__control-'] {
            border-color: @field-error-control__border-color;
        }
    }

    &._disabled,
    &._disabled:hover {
        box-shadow: inherit;
        cursor: inherit;
        opacity: 1;
        outline: inherit;
    }

    &._hidden {
        display: none;
    }
}

.admin__field-control {
    & + & {
        margin-top: 1.5rem;
    }

    //  If there is a tooltip
    &._with-tooltip {
        > .admin__control-addon,
        > .admin__field-option,
        > .admin__control-select,
        > .admin__control-text,
        > .admin__control-textarea {
            max-width: ~'calc(100% - @{field-tooltip__width} - 4px)'; // Minus space size
        }

        .admin__field-tooltip {
            width: auto;
        }

        .admin__field-option {
            display: inline-block;
        }
    }

    //  If there is a fallback reset button
    &._with-reset {
        > .admin__control-addon,
        > .admin__control-text,
        > .admin__control-textarea {
            width: ~'calc(100% - @{field-fallback-reset__width} - @{field-fallback-reset-icon__margin-left} - 4px)'; // Minus space size
        }

        .admin__field-fallback-reset {
            margin-left: @field-fallback-reset__margin-left;
            margin-top: @field-fallback-reset__margin-top;
            vertical-align: top;
        }

        //  If both
        &._with-tooltip {
            > .admin__control-addon,
            > .admin__control-text,
            > .admin__control-textarea {
                width: ~'calc(100% - @{field-fallback-reset__width} - @{field-fallback-reset-icon__margin-left} - @{field-tooltip__width} - 8px)'; // Minus 2 space sizes
            }
        }
    }
}
/* ... */

